[package]
name = "delay_queue_split"
version = "0.1.0-alpha.1"
authors = ["Miquel van Smoorenburg <mike@langeraar.net>"]
edition = "2018"

readme = "README.md"
description = "extension trait that adds a split() method to DelayQueue"
#documentation = "https://docs.rs/webdav-handler"
repository = "https://github.com/miquels/delay_queue_split"
homepage = "https://github.com/miquels/delay_queue_split"
authors = ["Miquel van Smoorenburg <mike@langeraar.net>"]
edition = "2018"
license = "MIT"
keywords = [tokio, "DelayQueue"]

[dependencies]
tokio = { version = "0.2", features = ["macros", "rt-core", "time", "stream", "sync"] }
